@@ -1,0 +1,2 @@
+Graphical and tabular effect displays, e.g., of interactions, for
+various statistical models with linear predictors.
