@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3097 2019/07/31 10:56:31 nia Exp $
+$NetBSD: CHANGES-2019,v 1.3098 2019/07/31 12:59:05 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5054,3 +5054,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated devel/libidn2 to 2.2.0 [nia 2019-07-31]
 	Updated audio/opusfile to 0.11 [nia 2019-07-31]
 	Updated games/openttd to 1.9.2 [nia 2019-07-31]
+	Added graphics/R-effects version 4.1.1 [brook 2019-07-31]
